--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
                     <input type="radio" name="sexo" id="rbFeminino">Feminino
                 </p>
                 <p>Altura: <input type="text" name="" id="inAltura"></p>
-                <p>
-                    <input type="button" value="Calcular Peso Ideal" id="btcalcular">
+                <p class="botoes">
+                    <input type="button" value="Calcular Peso" id="btcalcular">
                     <input type="button" value="Limpar Campo" id="btLimpar">
                 </p>
 
